# Bongobs-Cat-Plugin

./: CMakeLists.txt  Define.cpp  Define.hpp  EventManager.cpp  EventManager.hpp  Hook.cpp  Hook.hpp  InfoReader.cpp  InfoReader.hpp  LAppModel.cpp  LAppModel.hpp  Live2DManager.cpp  Live2DManager.hpp  Model.cpp  Model.hpp  Pal.cpp  Pal.hpp  README.md  Sprite.cpp  Sprite.hpp  View.cpp  View.hpp  VtuberDelegate.cpp  VtuberDelegate.hpp  VtuberFrameWork.cpp  VtuberFrameWork.hpp  VtuberPlugin.cpp  VtuberPlugin.hpp  vtuber_plugin.cpp
CubismSdk/Core/: README.md  RedistributableFiles.txt
CubismSdk/Core/include/: Live2DCubismCore.h
CubismSdk/Framework/src/: CubismModelSettingJson.cpp
CubismSdk/Framework/src/Effect/: CubismEyeBlink.hpp
CubismSdk/Framework/src/Math/: CubismModelMatrix.cpp
CubismSdk/Framework/src/Model/: CubismModel.hpp
CubismSdk/Framework/src/Motion/: CubismMotionQueueEntry.cpp  CubismMotionQueueManager.cpp
CubismSdk/Framework/src/Rendering/D3D11/: CubismRenderState_D3D11.cpp  CubismRenderState_D3D11.hpp  CubismRenderer_D3D11.cpp
CubismSdk/Framework/src/Rendering/D3D9/: CubismRenderer_D3D9.cpp
CubismSdk/Framework/src/Rendering/OpenGL/: CubismRenderer_OpenGLES2.cpp
CubismSdk/Framework/src/Type/: csmVector.hpp
Resources/Bango Cat/Resources/cat/: cat.cdi3.json
Resources/Bango Cat/Resources/right hand/: RightHand.moc3
Resources/Bango Cat/mode/: config.json
Resources/Bango Cat/mode/feixue/: config.json
Resources/Bango Cat/mode/standard/: config.json
data/Resources/Bango Cat/face/: config.json
data/Resources/Bango Cat/mode/bilibiliduo/: config.json
data/Resources/Bango Cat/mode/keyboard/: config.json
data/Resources/Bango Cat/mode/mania/: config.json
data/locale/: en-US.ini  ru-RU.ini  zh-CN.ini
gl/glew/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  glew.sln  glew.vcxproj  glew_s.vcxproj  glew_s.vcxproj.filters  glewinfo.vcxproj  glewinfo.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters  visualinfo.vcxproj  visualinfo.vcxproj.filters
gl/glew/glew.dir/Debug/: glew.res
gl/glew/glew.dir/Debug/glew.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  glew.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
gl/glew/glew.dir/MinSizeRel/glew.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  glew.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
gl/glew/glew.dir/RelWithDebInfo/: glew.res
gl/glew/glew.dir/RelWithDebInfo/glew.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  glew.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
gl/glew/glew_s.dir/Debug/: glew.res
gl/glew/glew_s.dir/Debug/glew_s.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link-cvtres.read.1.tlog  Lib.command.1.tlog  (+4 more)
gl/glew/glew_s.dir/RelWithDebInfo/: glew.res
gl/glew/glewinfo.dir/Debug/: glewinfo.res
gl/glew/glewinfo.dir/RelWithDebInfo/: glewinfo.res
gl/glew/visualinfo.dir/Debug/: visualinfo.res
gl/glew/visualinfo.dir/MinSizeRel/: visualinfo.res
gl/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
gl/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  glfw3ConfigVersion.cmake  glfw_config.h
gl/glfw/src/Debug/: glfw3.lib
gl/glfw/src/MinSizeRel/: glfw3.lib
gl/glfw/src/RelWithDebInfo/: glfw3.lib
gl/glfw/src/Release/: glfw3.lib
project/: Define.cpp  Define.hpp  EventManager.hpp  Hook.hpp  InfoReader.cpp  LAppAllocator.cpp  LAppAllocator.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  Live2DManager.hpp  Pal.cpp  Sprite.cpp  View.cpp  View.hpp  VtuberDelegate.hpp
(+147 files in other folders)
